2013-03-10 Laurent Rochette <lrochette@electric-cloud.com>

  * EC-Admin.jar & EC-Admin.xml: new version 1.4.3
     + Ignored sub-steps for localUsage
     + Added comparison for /server/hostIP and /server/hostrName
     
  * EC-Admin.jar & EC-Admin.xml: new version 1.4.2
     + updated help page
     
  * EC-Admin.jar & EC-Admin.xml: new version 1.4.1
     + Fixed percentage formating in localUsage

  * EC-Admin.jar & EC-Admin.xml: new version 1.4.0
     + Add localUsage statistics in performanceMetrics
     + Added a time limit for performanceMetric


2013-02-24 Laurent Rochette <lrochette@electric-cloud.com>

  * EC-Admin.jar & EC-Admin.xml: new version 1.3.8
    + removed jobId references in preparation of EC 5.0
    + added artifactsCleanup_byQuantity t clean AV but keep at least X.
    + Fixed ec_visbility  bugs in createPluginFromProject
    + Fixed descriptionForPlugin  bug in createPluginFromProject
    + Fixed several procedure descriptions for the plugin
    + Added help about project level properties for createPluginFromProject
    + Fixed problem with ec_setup and procedure names with dot (".") in createPluginFromProject


2013-12-26 Laurent Rochette <lrochette@electric-cloud.com>

  * Merry Christmas
  * EC-Admin.jar & EC-Admin.xml: new version 1.3.6
    + saveProjects:
          o Add chmod after directory creation for cases when server service and server agent service users are different.
    + Added saveAllObjects procedure to export a bunch of objects individually for finer granularity in the backup
    + Completed the plugin help
    + performanceMetrics
          o Added license usage information 
    + Added a sort to deleteObjects to prevent job range overlapping.

2013-11-27 Laurent Rochette <lrochette@electric-cloud.com>

  * Happy Thanksgiving!
  * EC-Admin.xml: new version 1.3.5
    + Added automatic performance charting
    + Bug fixes
    + Also available as a plugin.
    +  jobsCleanup and jobCleanup_byResult: